--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,72 @@ abbr[title], dfn[title] {border-bottom: 1px dotted; cursor: help;}
 table {border-collapse: collapse; border-spacing: 0ch;}
 hr {display: block; height: 1px; border: 0ch; border-top: 1px solid #ccc; margin: 1em 0; padding: 0;}
 input, select {vertical-align: middle;}
+
+body {
+    padding: 0;
+    margin: 0;
+    background: black;
+    color: #666;
+}
+#text-shadow-box { /* 设计框 */
+    position: absolute;
+    left: calc(50vw - 50vh);
+    top: 0;
+    width: 100vh;
+    height: 100vh;
+    background: #666;
+    overflow: hidden;
+    /* border: 1px solid #333; */
+}
+#text-shadow-box div.wall {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 32%;
+    left: 0px;
+}
+#text {
+    font-family: 宋体;
+    text-align: center;
+    line-height: 0.5em;
+    margin: 0;
+    height: 1px;
+    color: #999;
+    font-size: 100px;
+    font-weight: bold;
+    text-shadow: 5px -5px 16px #000;
+}
+div.wall div {
+    position: absolute;
+    width: 100%;
+    height: 40%;
+    top: 60px;
+    left: 0;
+    background: #999;
+}
+#spotlight {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background: url(../static/img/spotlight.png) center -300px;
+    font-size: 16px;
+}
+#spotlight a {
+    color: #ccc;
+    text-decoration: none;
+    position: absolute;
+    top: 58%;
+    left: 45%;
+    float: left;
+    text-shadow: 1px 1px #999, -1px -1px #333;
+}
+#cat {
+    position: fixed;
+    top: 24vh;
+    left: calc(50vw - 60px);
+    z-index: 1000;
+    opacity: 0.5;
+}
+#cat img {width: 120px;}
